cleaned auto-align code